--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,9 @@
-NODE_ENV=development
-PORT=2000
-
-DB_USER=dism
-DB_PASSWORD=dism
-DB_NAME=recruitment
+NODE_ENV=production
+PORT=5000
+TZ=Asia/Jakarta
+POSTGRES_USER=dism
+POSTGRES_PASSWORD=dism
+POSTGRES_DB=dism
 DB_CONNECTION=postgres
-DB_HOST=127.0.0.1
+DB_HOST=db
+DB_PORT_EXPOSE=5433
